@@ -1,3 +1,6 @@
+2008-03-02 Jerome Rapinat <romjerome@yahoo.fr>
+        * src/plugins/AgeOnDate.py : minor change for better translations
+
 2008-03-02  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/DefaultGramplets.py (PedigreeGramplet.get_boxes): 
 	Fixed a bug in turning off vertical lines; other refinements
